--- a/_posts/2015-10-05-tbd.md
+++ b/_posts/2015-10-05-tbd.md
@@ -1,20 +1,17 @@
 ---
 layout:     post
-title:		tbd
+title:		Online Communties: Slack
 date:       2015-10-05 06:42:00
 tag:		words
-summary:    TBD
+summary:    
 categories: words
 ---
+![neopets banner](/images/neopets.png)
 
-I haven't made a video in well over a year now, I never had an audience big enough for any real notice, and what YouTube has become is so much different than the small community that got me interested in it in 2007. 
+There's one thing I've known about myself ever since I was introduced to the internet itself, and that's how important online communities are to me. If you tried to visualize that, it would resemble an embarrassing, emotional overlapping timeline from everything from Neopets, YA novel forums, to (a much more mature?) YouTube and Twitter. Each had me just as passionate and committed as the last.
 
-I still consider myself a YouTuber, several of my closest friends originated from my YouTube friendships, and YouTube provided/aided in most if not all of my design jobs since then (not to mention couches all over the world.)
+While many of these communities still hold true in my daily life, the recent entrance of one in 2015 has fueled me in so many ways that I simply must speak on the value it of my life.
 
-So, I'm still asking myself the same question I was in 2007, "What does YouTube mean to me?"
+>The beauty of Slack for me lies in the diversity in content, community, and discussion that you have the opportunity to be welcome and a part of, regardless of your status.
 
-The YouTube community was and is home. This remains.
-
-Algorithms, fangirls, brand sponsorships aside, there remains many small but mighty YouTube communities out of the spotlight. The ones using it as a creative outlet or a platform for dicussion, that's where the true value lies. Money? Maybe not. But authentic relatonships and meaningful discussion? Absolutely. That's what YouTube meant to me. That's where my passion lies: in the cultivation and preservation of those communities. 
-
-##See you at VidCon, nerds.
+I belong to a Slack community about the future of podcasting, web friends in Chicago, UX designers, and women with careers in product. The talent and intellegence I'm surrounded everyday within the Slack communities is incredible, humbling, and one of the purest forms of positive online communities today.
