--- a/_posts/2014-06-08-echo.md
+++ b/_posts/2014-06-08-echo.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      echo magazine
+title:      Echo Magazine
 date:       2015-10-02 06:42:00
 tag:		work
 summary:    art direction | 2013
@@ -11,4 +11,3 @@ In the spring of 2013 I served as Art Director over a team of 30 designers and w
 ![cover](/images/echocover.jpg)
 _![page 1](/images/hiddentruths1.jpg)_
 _![page 2](/images/hiddentruths2.jpg)_
-
