--- a/_posts/2015-10-05-youtube 2.md
+++ b/_posts/2015-10-05-youtube 2.md
@@ -4,7 +4,7 @@ title:		The YouTube Thing
 date:       2015-10-05 06:42:00
 tag:		words
 summary:    What YouTube Means to Me
-categories: word
+categories: words
 ---
 
 _![Youtube Self](/images/YouTube_Screenshot.jpg)_
