--- a/_posts/2015-10-05-youtube 2.md
+++ b/_posts/2015-10-05-youtube 2.md
@@ -18,8 +18,8 @@ Through the years, I watched these people grow up, go through struggles, start c
 Video responses were the heart and soul of the community, so that's usually how you got your in. People could put a face to a username. From there, it kind of just snowballed. We were just friends with a cool thing in common. Soon my Friday nights were spent on BlogTV streams and skype was a daily fixture in my life. Gifs starting happening. I was doing collabs left and right. In 2013 I asked people to post a 10 second video giving a pun, calling it "Pun Run 2k13." There were 40 video responses. I signed with multi-channel network, Big Frame, for two years before I slowly made making videos much less of a priority and decided I wasn't going to play the YouTube algorithm game.
 
 
-_![VidCon](/images/Vidcon_2013_001.jpg)_
-_![VidCon](/images/Vidcon_2013_002.jpg)_
+_![VidCon](/images/VidCon_2013a.jpg)_
+_![VidCon](/images/VidCon_2013b.jpg)_
 
 ---
 
