--- a/_posts/2015-10-05-youtube 2.md
+++ b/_posts/2015-10-05-youtube 2.md
@@ -7,7 +7,7 @@ summary:    What YouTube Means to Me
 categories: words
 ---
 
-_![Youtube](/images/Youtube_Screenshot.jpg)_
+_![Youtube](/images/Youtube_Face.jpg)_
 
 When asked about my involvement with YouTube, I always seem to begin with "Well, it started as a hobby..." In high school I would come home from school and watch my favorite vloggers on YouTube. In 2016, this sounds relatively commonplace. In 2007, this wasn't something you said to people without accepting the fact that you would have to explain what you just said for a good five minutes and still be met with confusion and sarcastic comments.
 
