--- a/_posts/2015-01-08-big-frame.md
+++ b/_posts/2015-01-08-big-frame.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Big Frame/Youtube
 date:       2015-10-31 06:42:00
 tag:		work
-summary:    branding | ui & ux | 2013-2015
+summary:    branding | ui & ux 
 categories: work
 ---
 
