--- a/_posts/2014-06-08-echo.md
+++ b/_posts/2014-06-08-echo.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Echo Magazine
 date:       2015-10-02 06:42:00
 tag:		work
-summary:    art direction | 2013
+summary:    art direction 
 categories: work
 ---
 In the spring of 2013 I served as Art Director over a team of 30 designers and writers for the Summer/Fall 2013 issue circulating 30,000 copies in the Greater Chicago area.
