--- a/_posts/2015-01-08-big-frame3.md
+++ b/_posts/2015-01-08-big-frame3.md
@@ -1,11 +1,13 @@
 ---
 layout:     post
-title:      Big Frame/Youtube
+title:      Big Frame & Youtube
 date:       2015-10-31 06:42:00
 tag:		work
-summary:    branding | ui & ux
+summary:    branding | ui & ux | strategy consulting
 categories: work
 ---
+
+_![Big Frame](/images/Youtube_Work.png)_
 
 Since 2013, I've been working with and as talent at [Big Frame](http://www.bigfra.me/ "Big Frame"), a multi-channel YouTube network in Los Angeles. Youtube has been a huge part of my life since 2007, which I talk about a little more [here](https://allysonkate.github.io/word/2015/10/05/youtube%203/ "What Youtube Means to Me"). In 2013 I signed with Big Frame for two years as a content creator, producing videos on my personal channel in conjunction with a all-female vertical network initiative. As it became clearer to me that I didn't want to pursue YouTube as a career, I began fostering a design freelance relationship with Big Frame (now owned by DreamWorks/AwesomenessTV), which has now grown beyond my contract as talent.
 
