--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -7,7 +7,7 @@ summary:    ui & ux | ux research
 categories: work
 ---
 
-_![SND User](/images/SND_user.jpg)_
+![SND I Want In Desktop](/images/SND_Desktop.png)
 
 When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from Chris, co-founder of CodePen, I was instantly interested in the Society of News Design and the awesome premise of this event.
 
@@ -21,8 +21,12 @@ I was teamed up with Chris; Charlie, a features writer at Polygon; and Nicole, a
 <br>
 The most incredible part of the weekend for me was our user research process. Thanks to Charlie's intimate network of game developers, we were able to interview several developers all over the world and really pinpoint what our goals, like sourcing playtesters with a diverse experience level, and focus on the hurdles our platform had to overcome, such as the benefit of in-person playtesting.
 
+<br>
+
 <center>
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“I want in” from Team Printer&#39;s Row <a href="https://twitter.com/hashtag/SNDMakes?src=hash">#SNDMakes</a>-Chi <a href="https://t.co/E9lWtLgo8n">pic.twitter.com/E9lWtLgo8n</a></p>&mdash; SND (@SND) <a href="https://twitter.com/SND/status/696481476708212736">February 7, 2016</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+
+<br>
 
 <h4>I Want In was built in GitHub, deployed using Heroku, and our research and demo slides can be found here. My teammate Nicole also wrote a great post about the weekend here.</h4>
