--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -7,14 +7,14 @@ summary:    ui & ux | ux research
 categories: work
 ---
 
-![SND I Want In Desktop](/images/SND_Desktop.png)
+_![SND I Want In Desktop](/images/SND_Desktop.png)_
 
-When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from Chris, co-founder of CodePen, I was instantly interested in the Society of News Design and the awesome premise of this event.
+When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from [Chris](http://twitter.com/chriscoyier), co-founder of [CodePen](http://codepen.io), I was instantly interested in the Society of News Design and the awesome premise of this event.
 
 
 <h3> “How might we grow community around games, the artists who make them, the fans that love them?” </h3>
 
-I was teamed up with Chris; Charlie, a features writer at Polygon; and Nicole, a fellow at the Knight Lab. We set out to create a marketplace to bridge the gap between playtesters and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom.
+I was teamed up with Chris; [Charlie](http://twitter.com/charlie_l_hall), a features writer at [Polygon](Polygon); and [Nicole](http://twitter.com/nicolezhu), a fellow at the [NU Knight Lab](http://knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between playtesters and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. Our product? I Want In.
 
 >Players are hungry for new experiences, and developers are starved for playtesters — especially in the early stages of design. 'I Want In' presents developers with a community of players who are given the opportunity to identify their interest in a given game project, and ask a developer to be included in a playtest cycle. Developers can select who they're letting into their tests, and can reward the best playtesters with badges and other tokens - including retail game codes - to raise their profile in the community making them more likely to be included in other projects.
 
@@ -29,4 +29,4 @@ The most incredible part of the weekend for me was our user research process. Th
 
 <br>
 
-<h4>I Want In was built in GitHub, deployed using Heroku, and our research and demo slides can be found here. My teammate Nicole also wrote a great post about the weekend here.</h4>
+*I Want In was built in [GitHub](https://github.com/nicolezhu/playtesting), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found here. My teammate Nicole also wrote a great post about the weekend [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277).* ✧
