--- a/_posts/2015-01-08-big-frame3.md
+++ b/_posts/2015-01-08-big-frame3.md
@@ -9,7 +9,7 @@ categories: work
 
 _![Big Frame](/images/Youtube_Work.png)_
 
-Since 2013, I've been working with and as talent at [Big Frame](http://www.bigfra.me/ "Big Frame"), a multi-channel YouTube network in Los Angeles. Youtube has been a huge part of my life since 2007, which I talk about a little more [here](https://medium.com/@allysonkate/my-youtube-c07682d16efa#.vrqvjemfp). In 2013 I signed with Big Frame for two years as a content creator, producing videos on my personal channel in conjunction with a all-female vertical network initiative. As it became clearer to me that I didn't want to pursue YouTube as a career, I began fostering a design freelance relationship with Big Frame (now owned by DreamWorks/AwesomenessTV), which has now grown beyond my contract as talent.
+Since 2013, I've been working with and as talent at [Big Frame](http://www.bigfra.me/ "Big Frame"), a multi-channel YouTube network in Los Angeles. Youtube has been a huge part of my life since 2007, which I talk about a little more [here](https://medium.com/@allysonkate/my-youtube-c07682d16efa#.vrqvjemfp). In 2013 I signed with Big Frame for two years as a content creator, producing videos on my personal channel in conjunction with a all-female vertical network initiative. As it became clearer to me that I didn't want to pursue YouTube as a career, I began fostering a design freelance relationship with Big Frame (now owned by DreamWorks/AwesomenessTV), which has now grown beyond my contract as talent. ✧
 
 A few of the YouTubers I've worked with include:
 
