--- a/_posts/2014-06-08-echo.md
+++ b/_posts/2014-06-08-echo.md
@@ -3,10 +3,10 @@ layout:     post
 title:      Echo Magazine
 date:       2015-10-02 06:42:00
 tag:		work
-summary:    art direction 
+summary:    art direction
 categories: work
 ---
-In the spring of 2013 I served as Art Director over a team of 30 designers and writers for the Summer/Fall 2013 issue circulating 30,000 copies in the Greater Chicago area.
+In the spring of 2013 I served as Art Director over a team of 30 designers and writers for the Summer/Fall 2013 issue circulating 30,000 copies in the Greater Chicago area. See the full edition [here](https://issuu.com/echomag/docs/echomagfall13)
 
 ![cover](/images/echocover.jpg)
 _![page 1](/images/hiddentruths1.jpg)_
