--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -9,12 +9,12 @@ categories: work
 
 _![SND I Want In Desktop](/images/SND_Desktop.png)_
 
-When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from [Chris](http://twitter.com/chriscoyier), co-founder of [CodePen](http://codepen.io), I was instantly interested in the Society of News Design and the awesome premise of this event.
+When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from [Chris](http://www.twitter.com/chriscoyier/), co-founder of [CodePen](http://www.codepen.io/), I was instantly interested in the Society of News Design and the awesome premise of this event.
 
 
 <h3> “How might we grow community around games, the artists who make them, the fans that love them?” </h3>
 
-I was teamed up with Chris; [Charlie](http://twitter.com/charlie_l_hall), a features writer at [Polygon](http://polygon.com); and [Nicole](http://twitter.com/nicolezhu), a fellow at the [NU Knight Lab](http://knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between playtesters and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. Our product? I Want In.
+I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a features writer at [Polygon](http://www.polygon.com/); and [Nicole](http://www.twitter.com/nicolezhu/), a fellow at the [NU Knight Lab](http://www.knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between playtesters and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. Our product? I Want In.
 
 >Players are hungry for new experiences, and developers are starved for playtesters — especially in the early stages of design. 'I Want In' presents developers with a community of players who are given the opportunity to identify their interest in a given game project, and ask a developer to be included in a playtest cycle. Developers can select who they're letting into their tests, and can reward the best playtesters with badges and other tokens - including retail game codes - to raise their profile in the community making them more likely to be included in other projects.
 
@@ -29,4 +29,4 @@ The most incredible part of the weekend for me was our user research process. Th
 
 <br>
 
-*I Want In was built in [GitHub](https://github.com/nicolezhu/playtesting), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw).* ✧
+*I Want In was built in [GitHub](https://www.github.com/nicolezhu/playtesting/), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://www.blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://www.medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw/).* ✧
