--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -9,12 +9,13 @@ categories: work
 
 _![SND I Want In Desktop](/images/SND_Desktop.png)_
 
+
 When you get invited to a prototyping event focusing on problems facing modern media companies and news organizations... you throw yourself at it. When I got the invitation from [Chris](http://www.twitter.com/chriscoyier/), co-founder of [CodePen](http://www.codepen.io/), I was instantly interested in the Society of News Design and the awesome premise of this event.
 
 
 <h3> “How might we grow community around games, the artists who make them, the fans that love them?” </h3>
 
-I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a features writer at [Polygon](http://www.polygon.com/); and [Nicole](http://www.twitter.com/nicolezhu/), a fellow at the [NU Knight Lab](http://www.knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between playtesters and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. Our product? I Want In.
+I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a features writer at [Polygon](http://www.polygon.com/); and [Nicole](http://www.twitter.com/nicolezhu/), a fellow at the [NU Knight Lab](http://www.knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between game developers and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. In addition, as a team, we went in knowing we wanted to ship an MVP by the final presentation. Our product? I Want In.
 
 >Players are hungry for new experiences, and developers are starved for playtesters — especially in the early stages of design. 'I Want In' presents developers with a community of players who are given the opportunity to identify their interest in a given game project, and ask a developer to be included in a playtest cycle. Developers can select who they're letting into their tests, and can reward the best playtesters with badges and other tokens - including retail game codes - to raise their profile in the community making them more likely to be included in other projects.
 
@@ -22,6 +23,7 @@ I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a
 The most incredible part of the weekend for me was our user research process. Thanks to Charlie's intimate network of game developers, we were able to interview several developers all over the world and really pinpoint what our goals, like sourcing playtesters with a diverse experience level, and focus on the hurdles our platform had to overcome, such as the benefit of in-person playtesting.
 
 <br>
+
 
 <center>
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“I want in” from Team Printer&#39;s Row <a href="https://twitter.com/hashtag/SNDMakes?src=hash">#SNDMakes</a>-Chi <a href="https://t.co/E9lWtLgo8n">pic.twitter.com/E9lWtLgo8n</a></p>&mdash; SND (@SND) <a href="https://twitter.com/SND/status/696481476708212736">February 7, 2016</a></blockquote>
