--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -22,13 +22,13 @@ I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a
 <br>
 The most incredible part of the weekend for me was our user research process. Thanks to Charlie's intimate network of game developers, we were able to interview several developers all over the world and really pinpoint what our goals, like sourcing playtesters with a diverse experience level, and focus on the hurdles our platform had to overcome, such as the benefit of in-person playtesting.
 
-<br>
+
+![SND I Want In Desktop](/images/SND_Sketches.png)
+![SND I Want In Desktop](/images/SND_User.jpg)
 
 
-<center>
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“I want in” from Team Printer&#39;s Row <a href="https://twitter.com/hashtag/SNDMakes?src=hash">#SNDMakes</a>-Chi <a href="https://t.co/E9lWtLgo8n">pic.twitter.com/E9lWtLgo8n</a></p>&mdash; SND (@SND) <a href="https://twitter.com/SND/status/696481476708212736">February 7, 2016</a></blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+<!-- <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“I want in” from Team Printer&#39;s Row <a href="https://twitter.com/hashtag/SNDMakes?src=hash">#SNDMakes</a>-Chi <a href="https://t.co/E9lWtLgo8n">pic.twitter.com/E9lWtLgo8n</a></p>&mdash; SND (@SND) <a href="https://twitter.com/SND/status/696481476708212736">February 7, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 
-<br>
 
-*I Want In was built in [GitHub](https://www.github.com/nicolezhu/playtesting/), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://www.blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://www.medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw/).* ✧
+*For I Want In, we hosted the repo on [GitHub](https://www.github.com/nicolezhu/playtesting/), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://www.blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://www.medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw/).* ✧
