--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -31,4 +31,4 @@ The most incredible part of the weekend for me was our user research process. Th
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 
 
-*For I Want In, we hosted the repo on [GitHub](https://www.github.com/nicolezhu/playtesting/), deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://www.blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://www.medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw/).* ✧
+*The source code for I Want In is on [GitHub](https://www.github.com/nicolezhu/playtesting/), we deployed using [Heroku](https://iwantingames.herokuapp.com/), and our research and demo slides can be found [here](https://docs.google.com/presentation/d/1NV5ndEDgpt_2JxhuT4tpmnt8O5G5PCvU8VeOufZ71Dc/pub?slide=id.g831555176_0_277). My teammates Charlie and Nicole also wrote great posts about the weekend [here](http://www.blog.codepen.io/2016/02/20/experience-sndmakes-chicago/) and [here](https://www.medium.com/learning-journalism-tech/why-you-should-do-sndmakes-45b017f6fd4c#.yz9dr6qbw/).* ✧
