--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -23,8 +23,8 @@ I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a
 The most incredible part of the weekend for me was our user research process. Thanks to Charlie's intimate network of game developers, we were able to interview several developers all over the world and really pinpoint what our goals, like sourcing playtesters with a diverse experience level, and focus on the hurdles our platform had to overcome, such as the benefit of in-person playtesting.
 
 
-![SND I Want In Desktop](/images/SND_Sketches.png)
-![SND I Want In Desktop](/images/SND_User.jpg)
+![SND I Want In Research](/images/SND_Sketches.png)
+![SND I Want In User](/images/SND_User.jpg)
 
 
 <!-- <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“I want in” from Team Printer&#39;s Row <a href="https://twitter.com/hashtag/SNDMakes?src=hash">#SNDMakes</a>-Chi <a href="https://t.co/E9lWtLgo8n">pic.twitter.com/E9lWtLgo8n</a></p>&mdash; SND (@SND) <a href="https://twitter.com/SND/status/696481476708212736">February 7, 2016</a></blockquote>
