fixed twitter link

--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -15,7 +15,7 @@ When you get invited to a prototyping event focusing on problems facing modern m
 
 <h3> “How might we grow community around games, the artists who make them, the fans that love them?” </h3>
 
-I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a features writer at [Polygon](http://www.polygon.com/); and [Nicole](http://www.twitter.com/nicolezhu/), a fellow at the [NU Knight Lab](http://www.knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between game developers and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. In addition, as a team, we went in knowing we wanted to ship an MVP by the final presentation. Our product? I Want In.
+I was teamed up with Chris; [Charlie](http://www.twitter.com/charlie_l_hall/), a features writer at [Polygon](http://www.polygon.com/); and [Nicole](http://www.twitter.com/nicolelzhu/), a fellow at the [NU Knight Lab](http://www.knightlab.northwestern.edu/). We set out to create a marketplace to bridge the gap between game developers and potential playtesters. Being one of the members of the team who was more familiar with the gaming community, I focused on the user interviews and UI over the course of the weekend.  One of the things that makes SNDMakes so great is that it's not a competition, so teams are able to focus more on answering what the problem is, why it's worth solving, and for whom. In addition, as a team, we went in knowing we wanted to ship an MVP by the final presentation. Our product? I Want In.
 
 >Players are hungry for new experiences, and developers are starved for playtesters — especially in the early stages of design. 'I Want In' presents developers with a community of players who are given the opportunity to identify their interest in a given game project, and ask a developer to be included in a playtest cycle. Developers can select who they're letting into their tests, and can reward the best playtesters with badges and other tokens - including retail game codes - to raise their profile in the community making them more likely to be included in other projects.
 
