--- a/_posts/2015-01-08-big-frame3.md
+++ b/_posts/2015-01-08-big-frame3.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Big Frame & Youtube
 date:       2015-11-15 05:00:00
 tag:		work
-summary:    branding | ui & ux | strategy consulting
+summary:    branding & identity | strategy consulting
 categories: work
 ---
 
@@ -15,7 +15,7 @@ A few of the YouTubers I've worked with include:
 
 * Sarah Penna _(Big Frame co-founder, now with AwesomenessTV)_
 * Joe Penna _([MysteryGuitarMan](https://www.youtube.com/user/MysteryGuitarMan/ "MysteryGuitarMan") &#x2192; 2.85 mil)_
-* Jimmy Tatro _([LifeAccordingToJimmy](https://www.youtube.com/user/lifeaccordingtojimmy/ "LifeAccordingToJimmy") &#x2192; 2.5 mil)_
-* Rebecca Black _([rebecca](https://www.youtube.com/user/rebecca/ "rebecca") &#x2192; 1.25 mil)_
-* Jenn McAllister _([jennxpenn](https://www.youtube.com/user/jennxpenn/ "jennxpenn") &#x2192; 2.25 mil)_
-* Arden Rose _([ARose186](https://www.youtube.com/user/ARose186/ "rebecca")  &#x2192; 1.3 mil)_
+* Jimmy Tatro _([LifeAccordingToJimmy](https://www.youtube.com/user/lifeaccordingtojimmy/ "LifeAccordingToJimmy") &#x2192; 2.6 mil)_
+* Rebecca Black _([rebecca](https://www.youtube.com/user/rebecca/ "rebecca") &#x2192; 1.3 mil)_
+* Jenn McAllister _([jennxpenn](https://www.youtube.com/user/jennxpenn/ "jennxpenn") &#x2192; 2.8 mil)_
+* Arden Rose _([ARose186](https://www.youtube.com/user/ARose186/ "rebecca")  &#x2192; 1.5 mil)_
