added freelance page!
freelance added and other minor copy updates

--- a/_posts/2014-06-08-SND-Makes.md
+++ b/_posts/2014-06-08-SND-Makes.md
@@ -3,7 +3,7 @@ layout:     post
 title:      SND Makes Invitational
 date:       2016-02-07 06:42:00
 tag:		work
-summary:    ui & ux | ux research
+summary:    ui & ux | user research
 categories: work
 ---
 
