--- a/_posts/2015-01-08-big-frame3.md
+++ b/_posts/2015-01-08-big-frame3.md
@@ -9,13 +9,4 @@ categories: work
 
 _![Big Frame](/images/Youtube_Work.png)_
 
-Since 2013, I've been working with and as talent at [Big Frame](http://www.bigfra.me/ "Big Frame"), a multi-channel YouTube network in Los Angeles. Youtube has been a huge part of my life since 2007, which I talk about a little more [here](https://medium.com/@allysonkate/my-youtube-c07682d16efa#.vrqvjemfp/). In 2013 I signed with Big Frame as a content creator, producing videos on my personal channel in conjunction with an all-female vertical network initiative. After two years, it became clearer to me that I didn't want to pursue YouTube as a career, I began fostering a design freelance relationship with Big Frame (now owned by DreamWorks/AwesomenessTV), which has now grown beyond my contract as talent. ✧
-
-A few of the YouTubers I've worked with include:
-
-* Sarah Penna _(Big Frame co-founder, now with AwesomenessTV)_
-* Joe Penna _([MysteryGuitarMan](https://www.youtube.com/user/MysteryGuitarMan/ "MysteryGuitarMan") &#x2192; 2.85 mil)_
-* Jimmy Tatro _([LifeAccordingToJimmy](https://www.youtube.com/user/lifeaccordingtojimmy/ "LifeAccordingToJimmy") &#x2192; 2.6 mil)_
-* Rebecca Black _([rebecca](https://www.youtube.com/user/rebecca/ "rebecca") &#x2192; 1.3 mil)_
-* Jenn McAllister _([jennxpenn](https://www.youtube.com/user/jennxpenn/ "jennxpenn") &#x2192; 2.8 mil)_
-* Arden Rose _([ARose186](https://www.youtube.com/user/ARose186/ "rebecca")  &#x2192; 1.5 mil)_
+From 2013-2016, I worked with and as talent at [Big Frame](http://www.bigfra.me/ "Big Frame"), a multi-channel YouTube network in Los Angeles. Youtube has been a huge part of my life since 2007, which I talk about a little more [here](https://medium.com/@allysonkate/my-youtube-c07682d16efa#.vrqvjemfp/). In 2013 I signed with Big Frame as a content creator, producing videos on my personal channel in conjunction with an all-female vertical network initiative. After two years, it became clearer to me that I didn't want to pursue YouTube as a career, I began fostering a design freelance relationship with Big Frame (now owned by DreamWorks/AwesomenessTV), which grew beyond my contract as talent. ✧
